--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ capybara-*.html
 rerun.txt
 pickle-email-*.html
 *.env
-/db/*.json
+*.json
 
 
 # TODO Comment out these rules if you are OK with secrets being uploaded to the repo
